first auto-commit-man

--- a/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/029_Viz_0_TwitterInteractiveVizualisations.html
+++ b/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/029_Viz_0_TwitterInteractiveVizualisations.html
@@ -145,20 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<h1 id="visualizations-of-status-updates-in-twitterverse"><a class="header" href="#visualizations-of-status-updates-in-twitterverse">Visualizations of Status Updates in Twitterverse</a></h1>
-<ul>
-<li>https://github.com/olofbjorck/twitterVisualizations
-<ul>
-<li>The notebook <code>029_Viz_1_GraphNetworkTimeline</code> has three visualizations of Tweet Transmission Trees.</li>
-</ul>
-</li>
-<li>The notebook <code>029_Viz_2_...</code> has some possiblilities by leveraging work from a hackathon in 2020.</li>
-</ul>
-</div>
+                        <h1 id="029_viz_0_twitterinteractivevizualisations"><a class="header" href="#029_viz_0_twitterinteractivevizualisations">029_Viz_0_TwitterInteractiveVizualisations</a></h1>
 
                     </main>
 
