--- a/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/029_Viz_1_GraphNetworkTimeline.html
+++ b/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/029_Viz_1_GraphNetworkTimeline.html
@@ -145,254 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<h1 id="interactive-exploration-in-twitter-as-graph-network-and-timeline"><a class="header" href="#interactive-exploration-in-twitter-as-graph-network-and-timeline">Interactive Exploration in Twitter as Graph, Network and Timeline</a></h1>
-<p>by Olof Björck, Joakim Johansson, Rania Sahioun, Raazesh Sainudiin and Ivan Sadikov</p>
-<p>This is part of <em>Project MEP: Meme Evolution Programme</em> and supported by databricks, AWS and a Swedish VR grant.</p>
-<pre><code>Copyright 2016-2020 Olof Björck, Joakim Johansson, Rania Sahioun, Ivan Sadikov and Raazesh Sainudiin
-
-Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-</code></pre>
-</div>
-<div class="cell markdown">
-<h2 id="run-notebooks"><a class="header" href="#run-notebooks">Run notebooks</a></h2>
-<p>These notebooks have needed variables and functions.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-run">./025_b_TTTDFfunctions
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell markdown">
-<h2 id="read-twitter-data-as-tttdf"><a class="header" href="#read-twitter-data-as-tttdf">Read twitter data as TTTDF</a></h2>
-<p>We cache and count the data as a TTTDF or Twwet-Transmission-Tree dataFrame.</p>
-<p>Make sure the count is not too big as the driver may crash. One can do a time-varying version that truncates the visualized data to an appropriate finite number.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>USAGE: val df = tweetsDF2TTTDF(tweetsJsonStringDF2TweetsDF(fromParquetFile2DF(&quot;parquetFileName&quot;)))
-                  val df = tweetsDF2TTTDF(tweetsIDLong_JsonStringPairDF2TweetsDF(fromParquetFile2DF(&quot;parquetFileName&quot;)))
-                  
-import org.apache.spark.sql.types.{StructType, StructField, StringType}
-import org.apache.spark.sql.functions._
-import org.apache.spark.sql.types._
-import org.apache.spark.sql.ColumnName
-import org.apache.spark.sql.DataFrame
-fromParquetFile2DF: (InputDFAsParquetFilePatternString: String)org.apache.spark.sql.DataFrame
-tweetsJsonStringDF2TweetsDF: (tweetsAsJsonStringInputDF: org.apache.spark.sql.DataFrame)org.apache.spark.sql.DataFrame
-tweetsIDLong_JsonStringPairDF2TweetsDF: (tweetsAsIDLong_JsonStringInputDF: org.apache.spark.sql.DataFrame)org.apache.spark.sql.DataFrame
-tweetsDF2TTTDF: (tweetsInputDF: org.apache.spark.sql.DataFrame)org.apache.spark.sql.DataFrame
-tweetsDF2TTTDFWithURLsAndHashtags: (tweetsInputDF: org.apache.spark.sql.DataFrame)org.apache.spark.sql.DataFrame
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>tweetsDF2TTTDFLightWeight: (tweetsInputDF: org.apache.spark.sql.DataFrame)org.apache.spark.sql.DataFrame
-tweetsDF2TTTDFWithURLsAndHashtagsLightWeight: (tweetsInputDF: org.apache.spark.sql.DataFrame)org.apache.spark.sql.DataFrame
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Get the TTT  
-val rawTweetsDir = &quot;PATH_To_TWEETS_From_StreamingJOB&quot;
-val TTTDF = tweetsDF2TTTDFWithURLsAndHashtagsLightWeight(tweetsJsonStringDF2TweetsDF(fromParquetFile2DF(rawTweetsDir))).cache()
-TTTDF.count // Check how much we got (need to check size and auto-truncate to not crash driver program... all real for now)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>TTTDF: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [CurrentTweetDate: timestamp, CurrentTwID: bigint ... 35 more fields]
-res2: Long = 14451
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">TTTDF.rdd.getNumPartitions
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>res14: Int = 8
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<p>Next we first write the TTTDF to a parquet file and then read it into the visualizer. This will usually be done via a fast database.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">TTTDF.write.mode(&quot;overwrite&quot;)
-     .parquet(&quot;PATH_TO_PARQUET_TTTDF.parquet&quot;)
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">val TTTDFpq = spark.read.parquet(&quot;PATH_TO_PARQUET_TTTDF.parquet&quot;)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>TTTDFpq: org.apache.spark.sql.DataFrame = [CurrentTweetDate: timestamp, CurrentTwID: bigint ... 35 more fields]
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">TTTDFpq.rdd.getNumPartitions
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>res16: Int = 2
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<h2 id="visualize-a-twitter-graph"><a class="header" href="#visualize-a-twitter-graph">Visualize a Twitter Graph</a></h2>
-<p>The graph shows the twitter users in the collection organized by their popularity in terms of various status updates.</p>
-<p>See the function <code>visualizeGraph</code> for details. More sophisticated D3 interactive graphs are possible with the TTTDF, especially when filtered by time intervals or interactions of interest.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-run">./029_Viz_x_VizGraphFunction
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">visualizeGraph(TTTDFpq, 0, 700, 700)
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>*** WARNING: ***
-
-THERE IS NO SIZE CHECKING! Driver might crash as DataFrame.collect is used.
-Also, the display can only handle so and so many items at once. Too large
-dataset and the visualization might be very laggy or crash.
-
-***  USAGE:  ***
-
-visualizeGraph(TTTDF)
-
-****************
-
-import org.apache.spark.sql.DataFrame
-import org.apache.spark.sql.functions._
-visualizeGraph: (TTTDF: org.apache.spark.sql.DataFrame, tupleWeightCutOff: Int, width: Int, height: Int)Unit
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<h2 id="visualizing-retweet-network"><a class="header" href="#visualizing-retweet-network">Visualizing Retweet Network</a></h2>
-<p>Let us interactively explore the retweet network to identify tweets in terms of the number of retweets versus the number of its unique retweeeters.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-run">./029_Viz_x_VizNetworkFunction
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>*** WARNING: ***
-
-THERE IS NO SIZE CHECKING! Driver might crash as DataFrame.collect is used.
-Also, the display can only handle so and so many items at once. Too large
-dataset and the visualization might be very laggy or crash.
-
-***  USAGE:  ***
-
-visualizeNetwork(TTTDF)
-
-****************
-
-import org.apache.spark.sql.DataFrame
-import org.apache.spark.sql.functions._
-visualizeNetwork: (TTTDF: org.apache.spark.sql.DataFrame, width: Int, height: Int)Unit
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">visualizeNetwork(TTTDFpq)
-</code></pre>
-</div>
-<div class="cell markdown">
-<p><img src="https://github.com/lamastex/scalable-data-science/raw/master/images/ScaDaMaLe/000_3-sds-3-x-st/visualizenetwork029_Viz_1.png" alt="" /></p>
-</div>
-<div class="cell markdown">
-<h2 id="interactively-visualize-a-twitter-timeline"><a class="header" href="#interactively-visualize-a-twitter-timeline">Interactively Visualize a twitter Timeline</a></h2>
-<p>Search through Tweets over a timeline.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-run">./029_Viz_x_VizTimelineFunction
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>*** WARNING: ***
-
-BUG: The first Tweet in the dataset doesn't display for some reason.
-
-THERE IS NO SIZE CHECKING! Driver might crash as DataFrame.collect is used.
-Also, the display can only handle so and so many items at once. Too large
-dataset and the visualization might be very laggy or crash.
-
-***  USAGE:  ***
-
-visualizeTimeline(TTTDF)
- 
-****************
-
-import org.apache.spark.sql.DataFrame
-visualizeTimeline: (TTTDF: org.apache.spark.sql.DataFrame, width: Int, height: Int)Unit
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">visualizeTimeline(TTTDFpq) 
-</code></pre>
-</div>
-<div class="cell markdown">
-<p><img src="https://github.com/lamastex/scalable-data-science/raw/master/images/ScaDaMaLe/000_3-sds-3-x-st/visualizeTimeline029_Viz_1.png" alt="" /></p>
-</div>
-<div class="cell markdown">
-<h2 id="what-next"><a class="header" href="#what-next">What next?</a></h2>
-<p>Ideally the TTTDF and its precursor raw tweets are in silver and bronze delta.io tables and one can then use an interactive dashboard such as:</p>
-<ul>
-<li><a href="https://superset.apache.org/">Apache Superset Overview</a></li>
-<li><a href="https://superset.apache.org/gallery">Apache Superset Gallery</a></li>
-</ul>
-<blockquote>
-<p>Superset is fast, lightweight, intuitive, and loaded with options that make it easy for users of all skill sets to explore and visualize their data, from simple line charts to highly detailed geospatial charts.</p>
-</blockquote>
-</div>
-<div class="cell code" execution_count="1" scrolled="auto">
-<div class="output execute_result html_result" execution_count="1">
-<iframe 
- src="https://superset.apache.org/gallery"
- width="95%" height="600">
-  <p>
-    <a href="http://spark.apache.org/docs/latest/index.html">
-      Fallback link for browsers that, unlikely, don't support frames
-    </a>
-  </p>
-</iframe>
-</div>
-</div>
+                        <h1 id="029_viz_1_graphnetworktimeline"><a class="header" href="#029_viz_1_graphnetworktimeline">029_Viz_1_GraphNetworkTimeline</a></h1>
 
                     </main>
 
