--- a/000_7-sds-3-x-ddl/contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_00_introduction.html
+++ b/000_7-sds-3-x-ddl/contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_00_introduction.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>exjobbsOfCombientMix2021_00_introduction</title>
+        <title>exjobbsOfCombientMix2021_00_introduction - sds-3.x/ScaDaMaLe</title>
 
 
         <!-- Custom HTML head -->
@@ -30,7 +30,10 @@
         <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="../../scroll-mdbook-outputs.css">
 
+        <!-- MathJax -->
+        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -110,7 +113,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
 
                     <div class="right-buttons">
                         <a href="../../print.html" title="Print this book" aria-label="Print this book">
@@ -142,28 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<h1 id="distributed-deep-learning"><a class="header" href="#distributed-deep-learning">Distributed Deep Learning</a></h1>
-<h2 id="cnns-with-horovod-mlflow-and-hypertuning-through-sparktrials"><a class="header" href="#cnns-with-horovod-mlflow-and-hypertuning-through-sparktrials">CNN's with horovod, MLFlow and hypertuning through SparkTrials</a></h2>
-<p>William Anzén (<a href="https://www.linkedin.com/in/william-anz%C3%A9n-b52003199/">Linkedin</a>), Christian von Koch (<a href="https://www.linkedin.com/in/christianvonkoch/">Linkedin</a>)</p>
-<p>2021, Stockholm, Sweden</p>
-<p>This project was supported by Combient Mix AB under the industrial supervision of Razesh Sainudiin and Max Fischer.</p>
-<p>However, all the neuromusculature credit goes to William and Christian, they absorbed the WASP PhD course over their X-mas holidays</p>
-<p><strong>Caveat</strong> These notebooks were done an databricks shard on Azure, as opposed to AWS.</p>
-<p>So one has to take some care up to databricks' <a href="https://www.terraform.io/">terraform</a> pipes. Loading data should be independent of the underlying cloud-provider as the data is loaded through Tensorflow Datasets, although the following notebooks have not been tested on this AWS infrastructure with their kind support of a total of USD 7,500 AWS credits through The databricks University Alliance which waived the DBU-units on a professional enterprise-grade shard for WASP SCadaMaLe/sds-3-x course with voluntary research students at any Swedish University who go through the curriculum first. Raazesh Sainudiin is most grateful to Rob Reed for the most admirable administration of The databricks University Alliance.</p>
-<p>** Resources: **</p>
-<p>These notebooks were inspired by Tensorflow's tutorial on <a href="https://www.tensorflow.org/tutorials/images/segmentation">Image Segmentation</a>.</p>
-<h3 id="01aimagesegmentation_unet"><a class="header" href="#01aimagesegmentation_unet">01a<em>image</em>segmentation_unet</a></h3>
-<p>In this chapter a simple <a href="https://arxiv.org/abs/1505.04597">U-Net</a> architecture is implemented and evaluated against the <a href="https://www.robots.ox.ac.uk/%7Evgg/data/pets/">Oxford Pets Data set</a>. The model achieves a validation accuracy of 81.51% and a validation loss of 0.7251 after 38/50 epochs (3.96 min full 50 epochs).</p>
-<h3 id="exjobbsofcombientmix202102aimagesegmenationpspnet"><a class="header" href="#exjobbsofcombientmix202102aimagesegmenationpspnet">exjobbsOfCombientMix2021<em>02a</em>image<em>segmenation</em>pspnet</a></h3>
-<p>In this chapter a <a href="https://arxiv.org/abs/1612.01105">PSPNet</a> architecture is implemented and evaluated against the <a href="https://www.robots.ox.ac.uk/%7Evgg/data/pets/">Oxford Pets Data set</a>. The model achieves a validation accuracy of 90.30% and a validation loss of 0.3145 after 42/50 epochs (39.64 min full 50 epochs).</p>
-<h3 id="exjobbsofcombientmix202103aimagesegmenationicnet"><a class="header" href="#exjobbsofcombientmix202103aimagesegmenationicnet">exjobbsOfCombientMix2021<em>03a</em>image<em>segmenation</em>icnet</a></h3>
-<p>In this chapter the <a href="https://arxiv.org/abs/1704.08545">ICNet</a> architecture is implemented and evaluated against the <a href="https://www.robots.ox.ac.uk/%7Evgg/data/pets/">Oxford Pets Data set</a>. The model achieves a validation accuracy of 86.64% and a validation loss of 0.3750 after 31/50 epochs (12.50 min full 50 epochs).</p>
-<h3 id="exjobbsofcombientmix202104apspnettuningparallel"><a class="header" href="#exjobbsofcombientmix202104apspnettuningparallel">exjobbsOfCombientMix2021<em>04a</em>pspnet<em>tuning</em>parallel</a></h3>
-<p>In this chapter we run hyperparameter tuning with <a href="https://docs.databricks.com/_static/notebooks/hyperopt-spark-mlflow.html">hyperopt &amp; SparkTrials</a> allowing the hyperparameter tuning to be made in parallel across multiple workers. Achieved 0.56 loss with parameters({'batch<em>size': 16, 'learning</em>rate': 0.0001437661898681224}) (1.56 hours - 4 workers)</p>
-<h3 id="exjobbsofcombientmix202105pspnet_horovod"><a class="header" href="#exjobbsofcombientmix202105pspnet_horovod">exjobbsOfCombientMix2021<em>05</em>pspnet_horovod</a></h3>
-<p>In this chapter we add <a href="https://arxiv.org/abs/1802.05799">horovod</a> to the notebook, allowing distributed training of the model. Achieved a validation accuracy of 89.87% and validation loss of loss: 0.2861 after 49/50 epochs (33.93 min - 4 workers).</p>
-</div>
+                        <h1 id="exjobbsofcombientmix2021_00_introduction"><a class="header" href="#exjobbsofcombientmix2021_00_introduction">exjobbsOfCombientMix2021_00_introduction</a></h1>
 
                     </main>
 
