--- a/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/029_Viz_2_CoSENSE_EmotionalDimensions.html
+++ b/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/029_Viz_2_CoSENSE_EmotionalDimensions.html
@@ -145,21 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<h1 id="visualizations-of-status-updates-in-twitterverse-as-emotional-dimensions"><a class="header" href="#visualizations-of-status-updates-in-twitterverse-as-emotional-dimensions">Visualizations of Status Updates in Twitterverse as Emotional Dimensions</a></h1>
-<p>The following codes can be leveraged to obtain emotional dimensions on <code>display_HTML</code> in this notebook and later for dashboards, say via Apache Superset or others.</p>
-<ul>
-<li>https://github.com/lamastex/CoSENSE
-<ul>
-<li>Video Presented to hackthecrisis.se</li>
-<li><a href="https://www.youtube.com/watch?v=OTQ0j6UcMb8&amp;rel=0&amp;autoplay=1&amp;modestbranding=1&amp;start=1"><img src="http://img.youtube.com/vi/OTQ0j6UcMb8/0.jpg" alt="CoSENSE Presentation to hackthecrisis.se" /></a></li>
-</ul>
-</li>
-</ul>
-</div>
+                        <h1 id="029_viz_2_cosense_emotionaldimensions"><a class="header" href="#029_viz_2_cosense_emotionaldimensions">029_Viz_2_CoSENSE_EmotionalDimensions</a></h1>
 
                     </main>
 
