--- a/000_7-sds-3-x-ddl/contents/000_7-sds-3-x-ddl/0y_mnist-pytorch.html
+++ b/000_7-sds-3-x-ddl/contents/000_7-sds-3-x-ddl/0y_mnist-pytorch.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>0y_mnist-pytorch</title>
+        <title>0y_mnist-pytorch - sds-3.x/ScaDaMaLe</title>
 
 
         <!-- Custom HTML head -->
@@ -30,7 +30,10 @@
         <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="../../scroll-mdbook-outputs.css">
 
+        <!-- MathJax -->
+        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -110,7 +113,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
 
                     <div class="right-buttons">
                         <a href="../../print.html" title="Print this book" aria-label="Print this book">
@@ -142,223 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-<p>The following is from databricks blog with minor adaptations with help from Tilo Wiklund.</p>
-</div>
-<div class="cell markdown">
-<h1 id="distributed-deep-learning-training-using-pytorch-with-horovodrunner-for-mnist"><a class="header" href="#distributed-deep-learning-training-using-pytorch-with-horovodrunner-for-mnist">Distributed deep learning training using PyTorch with HorovodRunner for MNIST</a></h1>
-<p>This notebook demonstrates how to train a model for the MNIST dataset using PyTorch. It first shows how to train the model on a single node, and then shows how to adapt the code using HorovodRunner for distributed training.</p>
-<p><strong>Requirements</strong></p>
-<ul>
-<li>This notebook runs on CPU or GPU clusters.</li>
-<li>To run the notebook, create a cluster with</li>
-<li>Two workers</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h2 id="cluster-specs-on-databricks"><a class="header" href="#cluster-specs-on-databricks">Cluster Specs on databricks</a></h2>
-<p>Run on <code>tiny-debug-cluster-(no)gpu</code> or another cluster with the following runtime specifications with CPU/non-GPU and GPU clusters, respectively:</p>
-<ul>
-<li>Runs on non-GPU cluster with 3 (or more) nodes on 7.4 ML runtime (nodes are 1+2 x m4.xlarge)</li>
-<li>Runs on GPU cluster with 3 (or more) nodes on 7.4 ML GPU runtime (nodes are 1+2 x g4dn.xlarge)</li>
-</ul>
-<p>You do not need to &quot;install&quot; anything else in databricks as everything needed is pre-installed in the runtime environment on the right nodes.</p>
-</div>
-<div class="cell markdown">
-<h2 id="set-up-checkpoint-location"><a class="header" href="#set-up-checkpoint-location">Set up checkpoint location</a></h2>
-<p>The next cell creates a directory for saved checkpoint models. Databricks recommends saving training data under <code>dbfs:/ml</code>, which maps to <code>file:/dbfs/ml</code> on driver and worker nodes.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">PYTORCH_DIR = '/dbfs/ml/horovod_pytorch'
-</code></pre>
-</div>
-<div class="cell markdown">
-<h2 id="prepare-single-node-code"><a class="header" href="#prepare-single-node-code">Prepare single-node code</a></h2>
-<p>First you need to have working single-node PyTorch code. This is modified from <a href="https://github.com/horovod/horovod/blob/master/examples/pytorch/pytorch_mnist.py">Horovod's PyTorch MNIST Example</a>.</p>
-</div>
-<div class="cell markdown">
-<h3 id="define-a-simple-convolutional-network"><a class="header" href="#define-a-simple-convolutional-network">Define a simple convolutional network</a></h3>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import torch
-import torch.nn as nn
-import torch.nn.functional as F
-
-class Net(nn.Module):
-    def __init__(self):
-        super(Net, self).__init__()
-        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)
-        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)
-        self.conv2_drop = nn.Dropout2d()
-        self.fc1 = nn.Linear(320, 50)
-        self.fc2 = nn.Linear(50, 10)
-
-    def forward(self, x):
-        x = F.relu(F.max_pool2d(self.conv1(x), 2))
-        x = F.relu(F.max_pool2d(self.conv2_drop(self.conv2(x)), 2))
-        x = x.view(-1, 320)
-        x = F.relu(self.fc1(x))
-        x = F.dropout(x, training=self.training)
-        x = self.fc2(x)
-        return F.log_softmax(x)
-</code></pre>
-</div>
-<div class="cell markdown">
-<h3 id="configure-single-node-training"><a class="header" href="#configure-single-node-training">Configure single-node training</a></h3>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python"># Specify training parameters
-batch_size = 100
-num_epochs = 5
-momentum = 0.5
-log_interval = 100
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">def train_one_epoch(model, device, data_loader, optimizer, epoch):
-    model.train()
-    for batch_idx, (data, target) in enumerate(data_loader):
-        data, target = data.to(device), target.to(device)
-        optimizer.zero_grad()
-        output = model(data)
-        loss = F.nll_loss(output, target)
-        loss.backward()
-        optimizer.step()
-        if batch_idx % log_interval == 0:
-            print('Train Epoch: {} [{}/{} ({:.0f}%)]\tLoss: {:.6f}'.format(
-                epoch, batch_idx * len(data), len(data_loader) * len(data),
-                100. * batch_idx / len(data_loader), loss.item()))
-</code></pre>
-</div>
-<div class="cell markdown">
-<h3 id="prepare-log-directory"><a class="header" href="#prepare-log-directory">Prepare log directory</a></h3>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">from time import time
-import os
-
-LOG_DIR = os.path.join(PYTORCH_DIR, str(time()), 'MNISTDemo')
-os.makedirs(LOG_DIR)
-</code></pre>
-</div>
-<div class="cell markdown">
-<h3 id="create-method-for-checkpointing-and-persisting-model"><a class="header" href="#create-method-for-checkpointing-and-persisting-model">Create method for checkpointing and persisting model</a></h3>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">def save_checkpoint(model, optimizer, epoch):
-  filepath = LOG_DIR + '/checkpoint-{epoch}.pth.tar'.format(epoch=epoch)
-  state = {
-    'model': model.state_dict(),
-    'optimizer': optimizer.state_dict(),
-  }
-  torch.save(state, filepath)
-</code></pre>
-</div>
-<div class="cell markdown">
-<h3 id="run-single-node-training-with-pytorch"><a class="header" href="#run-single-node-training-with-pytorch">Run single-node training with PyTorch</a></h3>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import torch.optim as optim
-from torchvision import datasets, transforms
-
-def train(learning_rate):
-  device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
-
-  train_dataset = datasets.MNIST(
-    'data', 
-    train=True,
-    download=True,
-    transform=transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))]))
-  data_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)
-
-  model = Net().to(device)
-
-  optimizer = optim.SGD(model.parameters(), lr=learning_rate, momentum=momentum)
-
-  for epoch in range(1, num_epochs + 1):
-    train_one_epoch(model, device, data_loader, optimizer, epoch)
-    save_checkpoint(model, optimizer, epoch)
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>Run the <code>train</code> function you just created to train a model on the driver node.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python"># Runs in  49.65 seconds on 3 node    GPU cluster
-# Runs in 118.2 seconds on 3 node non-GPU cluster
-train(learning_rate = 0.001)
-</code></pre>
-</div>
-<div class="cell markdown">
-<h2 id="migrate-to-horovodrunner"><a class="header" href="#migrate-to-horovodrunner">Migrate to HorovodRunner</a></h2>
-<p>HorovodRunner takes a Python method that contains deep learning training code with Horovod hooks. HorovodRunner pickles the method on the driver and distributes it to Spark workers. A Horovod MPI job is embedded as a Spark job using barrier execution mode.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import horovod.torch as hvd
-from sparkdl import HorovodRunner
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">def train_hvd(learning_rate):
-  
-  # Initialize Horovod
-  hvd.init()  
-  device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
-  
-  if device.type == 'cuda':
-    # Pin GPU to local rank
-    torch.cuda.set_device(hvd.local_rank())
-
-  train_dataset = datasets.MNIST(
-    # Use different root directory for each worker to avoid conflicts
-    root='data-%d'% hvd.rank(),  
-    train=True, 
-    download=True,
-    transform=transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))])
-  )
-
-  from torch.utils.data.distributed import DistributedSampler
-  
-  # Configure the sampler so that each worker gets a distinct sample of the input dataset
-  train_sampler = DistributedSampler(train_dataset, num_replicas=hvd.size(), rank=hvd.rank())
-  # Use train_sampler to load a different sample of data on each worker
-  train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, sampler=train_sampler)
-
-  model = Net().to(device)
-  
-  # The effective batch size in synchronous distributed training is scaled by the number of workers
-  # Increase learning_rate to compensate for the increased batch size
-  optimizer = optim.SGD(model.parameters(), lr=learning_rate * hvd.size(), momentum=momentum)
-
-  # Wrap the local optimizer with hvd.DistributedOptimizer so that Horovod handles the distributed optimization
-  optimizer = hvd.DistributedOptimizer(optimizer, named_parameters=model.named_parameters())
-  
-  # Broadcast initial parameters so all workers start with the same parameters
-  hvd.broadcast_parameters(model.state_dict(), root_rank=0)
-
-  for epoch in range(1, num_epochs + 1):
-    train_one_epoch(model, device, train_loader, optimizer, epoch)
-    # Save checkpoints only on worker 0 to prevent conflicts between workers
-    if hvd.rank() == 0:
-      save_checkpoint(model, optimizer, epoch)
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>Now that you have defined a training function with Horovod, you can use HorovodRunner to distribute the work of training the model.</p>
-<p>The HorovodRunner parameter <code>np</code> sets the number of processes. This example uses a cluster with two workers, each with a single GPU, so set <code>np=2</code>. (If you use <code>np=-1</code>, HorovodRunner trains using a single process on the driver node.)</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python"># Runs in 51.63 seconds on 3 node     GPU cluster
-# Runs in 96.6  seconds on 3 node non-GPU cluster
-hr = HorovodRunner(np=2) 
-hr.run(train_hvd, learning_rate = 0.001)
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>Under the hood, HorovodRunner takes a Python method that contains deep learning training code with Horovod hooks. HorovodRunner pickles the method on the driver and distributes it to Spark workers. A Horovod MPI job is embedded as a Spark job using the barrier execution mode. The first executor collects the IP addresses of all task executors using BarrierTaskContext and triggers a Horovod job using <code>mpirun</code>. Each Python MPI process loads the pickled user program, deserializes it, and runs it.</p>
-<p>For more information, see <a href="https://databricks.github.io/spark-deep-learning/#api-documentation">HorovodRunner API documentation</a>.</p>
-</div>
+                        <h1 id="0y_mnist-pytorch"><a class="header" href="#0y_mnist-pytorch">0y_mnist-pytorch</a></h1>
 
                     </main>
 
