--- a/000_7-sds-3-x-ddl/index.html
+++ b/000_7-sds-3-x-ddl/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>00_DDL_Introduction</title>
+        <title>00_DDL_Introduction - sds-3.x/ScaDaMaLe</title>
 
 
         <!-- Custom HTML head -->
@@ -30,7 +30,10 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="scroll-mdbook-outputs.css">
 
+        <!-- MathJax -->
+        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -110,7 +113,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -142,29 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<h1 id="introduction-to-distributed-deep-learning-ddl-with-horovod-over-tensorflowkeras-and-pytorch"><a class="header" href="#introduction-to-distributed-deep-learning-ddl-with-horovod-over-tensorflowkeras-and-pytorch">Introduction to Distributed Deep Learning (DDL) with Horovod over Tensorflow/keras and Pytorch</a></h1>
-<p>Raazesh Sainudiin and Tilo Wiklund</p>
-<p>This is just a set of links and notebooks from the databricks blog on the topic.</p>
-<p>It is meant to help you take the fastest steps into DDL including instructions to install and setup the right libraries and environments in databricks.</p>
-</div>
-<div class="cell markdown">
-<p>Please see the following for more details on how this module is brought to you and to be able to take it further for your own goals:</p>
-<ul>
-<li><a href="https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/horovod-runner.html">https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/horovod-runner.html</a></li>
-<li>the original databricks notebooks are from:
-<ul>
-<li><a href="https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/mnist-tensorflow-keras.html">https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/mnist-tensorflow-keras.html</a></li>
-</ul>
-</li>
-<li><a href="https://horovod.readthedocs.io/en/stable/keras.html">https://horovod.readthedocs.io/en/stable/keras.html</a></li>
-<li><a href="https://arxiv.org/abs/1802.05799">https://arxiv.org/abs/1802.05799</a></li>
-<li><a href="https://github.com/horovod/horovod">https://github.com/horovod/horovod</a></li>
-</ul>
-</div>
+                        <h1 id="00_ddl_introduction"><a class="header" href="#00_ddl_introduction">00_DDL_Introduction</a></h1>
 
                     </main>
 
